# MyChronicle-backend

./: .dockerignore  .gitignore  Dockerfile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt  test.py  test.txt
.github/workflows/: deploy.yml
app/: TODO.md  dependencies.py  exceptions.py  main.py
app/auth/: auth_dependencies.py  jwt_handler.py  password_handler.py  password_validation.py  session_handler.py
app/cache/: anilist_cache.py
app/context/: anilist_season_info.py  user_media_entry_context.py
app/core/: config.py  database.py  dependencies.py  event_bus.py  event_handlers.py  exception_handlers.py  exceptions.py  factory.py  infrastructure.py  logging.py  repositories.py  state.py
app/data/: tmdb_tv_genres.json
app/enums/: anilist_enums.py  review_enums.py  tmdb_enums.py  user_media_entry_enums.py
app/integrations/: anilistApi.py  http_helpers.py  igdb_api.py  imdb_api.py  tmdb_api.py
app/middleware/: request_context.py
app/models/: anilist_models.py  auth_models.py  cache_models.py  igdb_models.py  imdb_models.py  jwt_models.py  media_models.py  review_models.py  tmdb_models.py  user_media_entry.py  user_media_entry_models.py  user_models.py
app/repositories/: _repo_observability.py  review_repository.py  user_media_entry_repository.py  user_repository.py
app/routes/: anilist_router.py  auth_router.py  discover_router.py  igdb_router.py  imdb_router.py  media_router.py  review_router.py  search_router.py  tmdb_router.py  user_media_entry_router.py  user_router.py
app/services/: anilist_service.py  auth_service.py  igdb_service.py  imdb_service.py  library_service.py  media_normalizer.py  redis_service.py  review_service.py  tmdb_service.py  user_media_entry_service.py  user_service.py
app/utils/: anilist_normalizer.py  anilist_seasons.py  genre_utils.py  media_normalizer.py  tmdb_normalizer.py
review-app-front-end/: package-lock.json  package.json
review-app-front-end/src/: App.tsx  index.css
scripts/migrations/: 2026_04_04_add_user_id_to_reviews.py
tests/: conftest.py  test_config.py
tests/auth/: test_jwt_handler.py  test_password_handler.py
tests/core/: test_dependencies.py  test_infrastructure.py
tests/integration/: test_user_media_entries.py
tests/unit/core/: test_retry.py  (+3 more)
(+33 files in other folders)
