[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "media-review-app"
version = "0.1.0"
description = "Multi-media review and tracking application"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "bcrypt==4.0.1",
    "certifi==2025.8.3",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "dotenv==0.9.9",
    "ecdsa==0.19.1",
    "email_validator==2.2.0",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.8",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httptools==0.6.4",
    "httpx==0.28.1",
    "idna==3.10",
    "Jinja2==3.1.6",
    "markdown-it-py==3.0.0",
    "MarkupSafe==3.0.2",
    "mdurl==0.1.2",
    "motor==3.7.1",
    "passlib==1.7.4",
    "pyasn1==0.6.1",
    "pydantic==2.11.7",
    "pydantic_core==2.33.2",
    "Pygments==2.19.2",
    "pymongo==4.14.0",
    "python-dotenv==1.1.1",
    "python-jose==3.5.0",
    "python-multipart==0.0.2",
    "PyYAML==6.0.2",
    "redis==6.4.0",
    "rich==14.1.0",
    "rsa==4.9.1",
    "sentry-sdk==2.34.1",
    "six==1.17.0",
    "sniffio==1.3.1",
    "starlette==0.47.2",
    "typer==0.16.0",
    "typing-inspection==0.4.1",
    "typing_extensions==4.14.1",
    "urllib3==2.5.0",
    "uvicorn==0.35.0",
    "watchfiles==1.1.0",
    "websockets==15.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "pylint>=2.17.0",
    "mypy>=1.5.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "R0903",  # too-few-public-methods
]

[tool.pylint.format]
max-line-length = 100

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = false

[tool.pylance]
pythonVersion = "3.10"
typeCheckingMode = "basic"